--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^4.1.0",
     "geist": "^1.4.2",
     "lucide-react": "^0.511.0",
+    "metadata-scraper": "^0.2.61",
     "next": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
