--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@currently/shared": "file:packages/shared",
+    "@ferrucc-io/emoji-picker": "^0.0.45",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.1",
@@ -35,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.13.2",
     "geist": "^1.4.2",
     "lucide-react": "^0.511.0",
     "metadata-scraper": "^0.2.61",
