--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "latest",
     "@upstash/redis": "^1.35.3",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
