--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@upstash/redis": "^1.35.3",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
